--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multiscreen-audioplayer",
+  "name": "soundscape-tv",
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
